[package]
name = "symsrv"
version = "0.1.0"
edition = "2021"
authors = ["Markus Stange <mstange@themasta.com>"]
license = "MIT/Apache-2.0"
description = "A microsoft symsrv symbol server consumer (Cache/downloader)"
repository = "https://github.com/mstange/profiler-symbol-server/"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
reqwest = { version = "0.11.10", features = [
    "default-tls",
    "gzip",
    "brotli",
    "deflate"
] }
hyper = { version = "0.14.18", features = ["full"] }
dirs = "4.0"
tokio = { version = "1.17.0", features = [
    "rt",
    "fs",
    "rt-multi-thread",
    "macros"
] }
thiserror = "1.0.26"
cab = "0.4.0"
memmap2 = "0.5.0"
