[package]
name = "profiler-get-symbols-wasm"
version = "0.1.0"
authors = ["Markus Stange <mstange@themasta.com>"]
edition = "2018"

[dependencies]
profiler-get-symbols = { path = "../lib/" }
js-sys = "0.3.53"
wasm-bindgen = {version = "0.2.76", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.26"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "^1.0.59"
# console_error_panic_hook = "0.1.6"

[lib]
crate-type = ["cdylib"]
