[package]
name = "wholesym-addr2line"
version = "0.4.1"
authors = ["Markus Stange <mstange.moz@gmail.com>"]
edition = "2021"
rust-version = "1.61"
description = "A command line binary with addr2line-compatible UI, using wholesym"
readme = "README.md"
homepage = "https://github.com/mstange/samply/tree/main/wholesym-addr2line"
repository = "https://github.com/mstange/samply"
license = "MIT OR Apache-2.0"
keywords = ["symbols", "profiling", "addr2line", "debuginfo"]

[package.metadata.dist]
dist = false

[dependencies]
wholesym = { version = "0.8.1", path = "../wholesym" }
tokio = { version = "1.46", features = ["rt", "rt-multi-thread", "macros"] }
clap = "4"

