[package]
name = "wholesym"
version = "0.8.0"
authors = ["Markus Stange <mstange.moz@gmail.com>"]
edition = "2021"
rust-version = "1.75" # needed by fs4
description = "A complete solution for fetching symbol files and resolving code addresses to symbols and debuginfo."
readme = "README.md"
homepage = "https://github.com/mstange/samply/tree/main/wholesym"
repository = "https://github.com/mstange/samply"
license = "MIT OR Apache-2.0"
keywords = ["symbols", "profiling", "addr2line", "debuginfo"]

[features]
default = []
# Enable the JSON API interface.
api = ["samply-api"]

[dependencies]
debugid = "0.8.0"
samply-api = { version = "0.24.0", path = "../samply-api", features = ["send_futures"], optional = true }
samply-symbols = { version = "0.24.0", path = "../samply-symbols", features = ["send_futures"] }
# symsrv = { path = "../../symsrv" }
symsrv = "0.5.2"
yoke = "0.7"
yoke-derive = "0.7"
libc = "0.2"
uuid = "1"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "stream",
    "gzip",
    "brotli",
    "deflate"
] }
bytes = "1.7"
memmap2 = "0.9.4"
tokio = { version = "1.38", features = ["fs"] }
futures-util = "0.3.30"
fs4 = "0.12"
thiserror = "2"
async-compression = { version = "0.4", default-features = false, features = [
    "tokio",
    "futures-io",
    "gzip"
] }
http = "1"
scopeguard = { version = "1.2.0", default-features = false }

# Needed for moria_mac_spotlight, to find dSYM files
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation-sys = "0.8"
core-foundation = "0.10"

[dev-dependencies]
futures = "0.3.5"
tokio = { version = "1.38", features = ["macros"] } # Feature "macros" for #[tokio::test]
