[package]
name = "dump-table"
version = "0.1.0"
authors = ["Markus Stange <mstange@themasta.com>"]
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
profiler-get-symbols = { path = "../../lib", features = ["partial_read_stats"] }
structopt = "0.3.14"
memmap2 = "0.3.0"
anyhow = "1.0.28"
futures = "0.3.5"
memchr = { version = "2.4", default-features = false }
