[package]
name = "dump-table"
version = "0.1.0"
authors = ["Markus Stange <mstange@themasta.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
publish = false

[features]
default = []
# default = ["chunked_caching"] # To simulate wasm file reading
chunked_caching = []

[dependencies]
# samply-symbols = { path = "../../samply-symbols", features = ["partial_read_stats"] }
samply-symbols = { path = "../../samply-symbols" }
clap = { version = "4", features = ["derive"] }
memmap2 = "0.9.4"
anyhow = "1.0.86"
futures = "0.3.5"
